--- a/po/ca.po
+++ b/po/ca.po
@@ -3,17 +3,17 @@
 # This file is distributed under the same license as the PACKAGE package.
 #
 # Translators:
-# Arjen Balfoort <schoelje@solydxk.com>, 2015
+# Arjen Balfoort <schoelje@solydxk.com>, 2015-2016
 # Eduard Selma <selma@tinet.cat>, 2015
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2010
 msgid ""
 msgstr ""
-"Project-Id-Version: live-installer\n"
+"Project-Id-Version: live-installer-3\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-01-18 08:57+0100\n"
-"PO-Revision-Date: 2016-01-02 09:09+0000\n"
+"POT-Creation-Date: 2016-01-19 15:39+0100\n"
+"PO-Revision-Date: 2016-01-19 14:34+0000\n"
 "Last-Translator: Arjen Balfoort <schoelje@solydxk.com>\n"
-"Language-Team: Catalan (http://www.transifex.com/solydxk/live-installer/"
+"Language-Team: Catalan (http://www.transifex.com/solydxk/live-installer-3/"
 "language/ca/)\n"
 "Language: ca\n"
 "MIME-Version: 1.0\n"
@@ -225,28 +225,24 @@ msgid "Not mounted"
 msgstr ""
 
 #: ../usr/lib/live-installer-3/installer.py:270
-#, fuzzy
 msgid ""
 "You must first manually mount your target filesystem(s) at /target to do a "
 "custom install!"
 msgstr ""
-"ERROR: Per fer una instal·lació personalitzada, primer cal muntar manualment "
-"el/s sistema/es de fitxers objectiu a /target!"
 
 #: ../usr/lib/live-installer-3/installer.py:279
 msgid "Base filesystem does not exist"
 msgstr ""
 
 #: ../usr/lib/live-installer-3/installer.py:280
-#, fuzzy
 msgid ""
 "Something is wrong with the installation medium! This is usually caused by "
 "burning tools which are not compatible with {}. Please burn the ISO image to "
 "DVD/USB using a different tool."
 msgstr ""
-"ERROR: Hi ha algun problema al suport de la instal·lació! Això normalment és "
-"causat per les eines de gravació incompatibles amb {}. Si us plau, graveu la "
-"imatge ISO al DVD/USB amb una eina diferent."
+"Hi ha algun problema amb el suport d'instal·lació! Sovint això és a causa de "
+"les eines de gravació, que no són compatibles amb {}. Si us plau, graveu la "
+"imatge ISO amb una eina diferent."
 
 #: ../usr/lib/live-installer-3/installer.py:333
 msgid "Copying"
@@ -257,9 +253,8 @@ msgid "Entering the system ..."
 msgstr "Entrant al sistema..."
 
 #: ../usr/lib/live-installer-3/installer.py:377
-#, fuzzy
 msgid "Installing EFI packages..."
-msgstr "Instal·lant {}..."
+msgstr ""
 
 #: ../usr/lib/live-installer-3/installer.py:421
 msgid "Installing drivers"
@@ -324,13 +319,12 @@ msgid "Grub not configured"
 msgstr ""
 
 #: ../usr/lib/live-installer-3/installer.py:756
-#, fuzzy
 msgid ""
 "The grub bootloader was not configured properly! You need to configure it "
 "manually."
 msgstr ""
-"Atenció: el gestor d'arrencada GRUB no està configurat correctament! Cal "
-"configurar-lo manualment. "
+"El gestor d'arrencada GRUB no està configurat correctament! Cal configurar-"
+"lo manualment."
 
 #: ../usr/lib/live-installer-3/installer.py:777
 msgid "Configuring Plymouth"
@@ -345,9 +339,8 @@ msgid "Cleaning APT"
 msgstr "Netejant l'APT "
 
 #: ../usr/lib/live-installer-3/installer.py:830
-#, fuzzy
 msgid "Unmounting partitions"
-msgstr "Encriptant %(partition)s ..."
+msgstr ""
 
 #: ../usr/lib/live-installer-3/installer.py:852
 #: ../usr/lib/live-installer-3/gtk_interface.py:848
@@ -917,19 +910,16 @@ msgstr ""
 "Esteu segurs de voler continuar? "
 
 #: ../usr/lib/live-installer-3/gtk_interface.py:1223
-#, fuzzy
 msgid "Select image"
-msgstr "Trieu una zona horària "
+msgstr ""
 
 #: ../usr/lib/live-installer-3/gtk_interface.py:1276
-#, fuzzy
 msgid "Take a photo"
-msgstr "Pren una foto... "
+msgstr ""
 
 #: ../usr/lib/live-installer-3/gtk_interface.py:1277
-#, fuzzy
 msgid "Unable to take a photo."
-msgstr "Pren una foto... "
+msgstr ""
 
 #: ../usr/share/applications/live-installer-3.desktop.in.h:1
 msgid "Install"
@@ -942,19 +932,3 @@ msgstr "Instal·lador autònom "
 #: ../usr/share/applications/live-installer-3.desktop.in.h:3
 msgid "Install the operating system"
 msgstr "Instal·la el Sistema Operatiu "
-
-#~ msgid "No slideshow template found."
-#~ msgstr "No s'ha trobat cap plantilla de presentació."
-
-#~ msgid "Images"
-#~ msgstr "Imatges "
-
-#~ msgid "Unexpected error"
-#~ msgstr "Error inesperat "
-
-#~ msgid ""
-#~ "The installer has failed with the following unexpected error. Please "
-#~ "submit a bug report!"
-#~ msgstr ""
-#~ "L'instal·lador ha fallat amb el següent error inesperat. Si us plau, "
-#~ "envieu un informe d'error!"
