--- a/po/de.po
+++ b/po/de.po
@@ -3,18 +3,18 @@
 # This file is distributed under the same license as the PACKAGE package.
 #
 # Translators:
-# Arjen Balfoort <schoelje@solydxk.com>, 2015
+# Arjen Balfoort <schoelje@solydxk.com>, 2015-2016
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2010
 # ilu lu, 2015
 # pitfd <pitfd@openmailbox.org>, 2015
 msgid ""
 msgstr ""
-"Project-Id-Version: live-installer\n"
+"Project-Id-Version: live-installer-3\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-01-18 08:57+0100\n"
-"PO-Revision-Date: 2016-01-02 09:09+0000\n"
+"POT-Creation-Date: 2016-01-19 15:39+0100\n"
+"PO-Revision-Date: 2016-01-19 14:36+0000\n"
 "Last-Translator: Arjen Balfoort <schoelje@solydxk.com>\n"
-"Language-Team: German (http://www.transifex.com/solydxk/live-installer/"
+"Language-Team: German (http://www.transifex.com/solydxk/live-installer-3/"
 "language/de/)\n"
 "Language: de\n"
 "MIME-Version: 1.0\n"
@@ -227,28 +227,24 @@ msgid "Not mounted"
 msgstr ""
 
 #: ../usr/lib/live-installer-3/installer.py:270
-#, fuzzy
 msgid ""
 "You must first manually mount your target filesystem(s) at /target to do a "
 "custom install!"
 msgstr ""
-"FEHLER: Die Zieldateisystem(e) müssen zuerst am /target manuell eingehängt "
-"werden, um eine benutzerdefinierte Installation durchzuführen!"
 
 #: ../usr/lib/live-installer-3/installer.py:279
 msgid "Base filesystem does not exist"
 msgstr ""
 
 #: ../usr/lib/live-installer-3/installer.py:280
-#, fuzzy
 msgid ""
 "Something is wrong with the installation medium! This is usually caused by "
 "burning tools which are not compatible with {}. Please burn the ISO image to "
 "DVD/USB using a different tool."
 msgstr ""
-"FEHLER: Mit dem Installationmedium stimmt etwas nicht! Ursache könnte ein "
-"Brennprogramm sein, das mit {} nicht kompatibel ist. Bitte beim Brennen des "
-"ISO-Abbildes auf DVD/USB ein anderes Programm benutzen."
+"Das Installationsmedium funktioniert nicht! Dies wird üblicherweise von mit "
+"{} nicht kompatiblen Brennprogrammen verursacht. Bitte das ISO Image mit "
+"einem anderen Programm auf DVD/USB brennen."
 
 #: ../usr/lib/live-installer-3/installer.py:333
 msgid "Copying"
@@ -259,9 +255,8 @@ msgid "Entering the system ..."
 msgstr "Lade das System ..."
 
 #: ../usr/lib/live-installer-3/installer.py:377
-#, fuzzy
 msgid "Installing EFI packages..."
-msgstr "Installiere {}..."
+msgstr ""
 
 #: ../usr/lib/live-installer-3/installer.py:421
 msgid "Installing drivers"
@@ -324,13 +319,12 @@ msgid "Grub not configured"
 msgstr ""
 
 #: ../usr/lib/live-installer-3/installer.py:756
-#, fuzzy
 msgid ""
 "The grub bootloader was not configured properly! You need to configure it "
 "manually."
 msgstr ""
-"ACHTUNG: Systemstarter (bootloader) GRUB ist nicht richtig konfiguriert! "
-"Dies muß manuell erfolgen."
+"Systemstarter (bootloader) GRUB ist nicht richtig konfiguriert! Dies muß "
+"manuell erfolgen."
 
 #: ../usr/lib/live-installer-3/installer.py:777
 msgid "Configuring Plymouth"
@@ -345,9 +339,8 @@ msgid "Cleaning APT"
 msgstr "APT wird bereinigt"
 
 #: ../usr/lib/live-installer-3/installer.py:830
-#, fuzzy
 msgid "Unmounting partitions"
-msgstr "Verschlüssele %(partition)s ..."
+msgstr ""
 
 #: ../usr/lib/live-installer-3/installer.py:852
 #: ../usr/lib/live-installer-3/gtk_interface.py:848
@@ -919,19 +912,16 @@ msgstr ""
 "Sind Sie sicher, dass Sie fortfahren wollen?"
 
 #: ../usr/lib/live-installer-3/gtk_interface.py:1223
-#, fuzzy
 msgid "Select image"
-msgstr "Zeitzone auswählen"
+msgstr ""
 
 #: ../usr/lib/live-installer-3/gtk_interface.py:1276
-#, fuzzy
 msgid "Take a photo"
-msgstr "Machen Sie ein Foto..."
+msgstr ""
 
 #: ../usr/lib/live-installer-3/gtk_interface.py:1277
-#, fuzzy
 msgid "Unable to take a photo."
-msgstr "Machen Sie ein Foto..."
+msgstr ""
 
 #: ../usr/share/applications/live-installer-3.desktop.in.h:1
 msgid "Install"
@@ -944,19 +934,3 @@ msgstr "Live Installer"
 #: ../usr/share/applications/live-installer-3.desktop.in.h:3
 msgid "Install the operating system"
 msgstr "Installiere das Betriebssystem"
-
-#~ msgid "No slideshow template found."
-#~ msgstr "Vorlage der Diashow nicht gefunden."
-
-#~ msgid "Images"
-#~ msgstr "Bilder"
-
-#~ msgid "Unexpected error"
-#~ msgstr "Unerwarteter Fehler"
-
-#~ msgid ""
-#~ "The installer has failed with the following unexpected error. Please "
-#~ "submit a bug report!"
-#~ msgstr ""
-#~ "Der Installer ist mit dem folgenden unerwarteten Fehler gescheitert. "
-#~ "Bitte einen Fehler-Bericht erstellen!"
