--- a/po/es.po
+++ b/po/es.po
@@ -3,17 +3,17 @@
 # This file is distributed under the same license as the PACKAGE package.
 #
 # Translators:
-# Arjen Balfoort <schoelje@solydxk.com>, 2015
+# Arjen Balfoort <schoelje@solydxk.com>, 2015-2016
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2010
 # Manuel <manutalcual@gmail.com>, 2015
 msgid ""
 msgstr ""
-"Project-Id-Version: live-installer\n"
+"Project-Id-Version: live-installer-3\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-01-18 08:57+0100\n"
-"PO-Revision-Date: 2016-01-02 09:09+0000\n"
+"POT-Creation-Date: 2016-01-19 15:39+0100\n"
+"PO-Revision-Date: 2016-01-19 14:37+0000\n"
 "Last-Translator: Arjen Balfoort <schoelje@solydxk.com>\n"
-"Language-Team: Spanish (http://www.transifex.com/solydxk/live-installer/"
+"Language-Team: Spanish (http://www.transifex.com/solydxk/live-installer-3/"
 "language/es/)\n"
 "Language: es\n"
 "MIME-Version: 1.0\n"
@@ -227,28 +227,24 @@ msgid "Not mounted"
 msgstr ""
 
 #: ../usr/lib/live-installer-3/installer.py:270
-#, fuzzy
 msgid ""
 "You must first manually mount your target filesystem(s) at /target to do a "
 "custom install!"
 msgstr ""
-"ERROR: ¡Para hacer una instalación personalizada, antes debe montar "
-"manualmente en /target su(s) sistema(s) de archivos objetivo!"
 
 #: ../usr/lib/live-installer-3/installer.py:279
 msgid "Base filesystem does not exist"
 msgstr ""
 
 #: ../usr/lib/live-installer-3/installer.py:280
-#, fuzzy
 msgid ""
 "Something is wrong with the installation medium! This is usually caused by "
 "burning tools which are not compatible with {}. Please burn the ISO image to "
 "DVD/USB using a different tool."
 msgstr ""
-"ERROR: Algo está mal en el medio de instalación!\n"
-"Esto normalmente está causado por grabadoras que no son compatibles con {}. "
-"Por favor, grabe la imagen ISO a un DVD/USB con otra herramienta."
+"Algo está mal en el medio de instalación! Esto normalmente está causado por "
+"grabadoras que no son compatibles con {}. Por favor, grabe la imagen ISO a "
+"un DVD/USB con otra herramienta."
 
 #: ../usr/lib/live-installer-3/installer.py:333
 msgid "Copying"
@@ -259,9 +255,8 @@ msgid "Entering the system ..."
 msgstr "Iniciando el nuevo sistema ..."
 
 #: ../usr/lib/live-installer-3/installer.py:377
-#, fuzzy
 msgid "Installing EFI packages..."
-msgstr "Instalando {}..."
+msgstr ""
 
 #: ../usr/lib/live-installer-3/installer.py:421
 msgid "Installing drivers"
@@ -325,12 +320,11 @@ msgid "Grub not configured"
 msgstr ""
 
 #: ../usr/lib/live-installer-3/installer.py:756
-#, fuzzy
 msgid ""
 "The grub bootloader was not configured properly! You need to configure it "
 "manually."
 msgstr ""
-"AVISO: ¡El cargador de arranque GRUB no se ha configurado correctamente! Es "
+"¡El cargador de arranque GRUB no se ha configurado correctamente! Es "
 "necesario configurarlo manualmente."
 
 #: ../usr/lib/live-installer-3/installer.py:777
@@ -346,9 +340,8 @@ msgid "Cleaning APT"
 msgstr "Limpiando APT"
 
 #: ../usr/lib/live-installer-3/installer.py:830
-#, fuzzy
 msgid "Unmounting partitions"
-msgstr "Cifrando %(partition)s"
+msgstr ""
 
 #: ../usr/lib/live-installer-3/installer.py:852
 #: ../usr/lib/live-installer-3/gtk_interface.py:848
@@ -914,19 +907,16 @@ msgstr ""
 "¿Está seguro de querer continuar?"
 
 #: ../usr/lib/live-installer-3/gtk_interface.py:1223
-#, fuzzy
 msgid "Select image"
-msgstr "Seleccione su zona horaria"
+msgstr ""
 
 #: ../usr/lib/live-installer-3/gtk_interface.py:1276
-#, fuzzy
 msgid "Take a photo"
-msgstr "Tome una foto..."
+msgstr ""
 
 #: ../usr/lib/live-installer-3/gtk_interface.py:1277
-#, fuzzy
 msgid "Unable to take a photo."
-msgstr "Tome una foto..."
+msgstr ""
 
 #: ../usr/share/applications/live-installer-3.desktop.in.h:1
 msgid "Install"
@@ -939,19 +929,3 @@ msgstr "Instalador Live"
 #: ../usr/share/applications/live-installer-3.desktop.in.h:3
 msgid "Install the operating system"
 msgstr "Instalar el sistema operativo"
-
-#~ msgid "No slideshow template found."
-#~ msgstr "No se ha encontrado la plantilla de presentación."
-
-#~ msgid "Images"
-#~ msgstr "Imágenes"
-
-#~ msgid "Unexpected error"
-#~ msgstr "Error inesperado"
-
-#~ msgid ""
-#~ "The installer has failed with the following unexpected error. Please "
-#~ "submit a bug report!"
-#~ msgstr ""
-#~ "El instalador ha fallado con el siguiente error inesperado.\n"
-#~ "¡Por favor!, envíe un informe de error."
