--- a/po/it.po
+++ b/po/it.po
@@ -4,17 +4,18 @@
 #
 # Translators:
 # alessio <palimmo@libero.it>, 2015
-# Arjen Balfoort <schoelje@solydxk.com>, 2015
+# Arjen Balfoort <schoelje@solydxk.com>, 2015-2016
 # Davide Favaro <belzebu87@gmail.com>, 2015
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2010
+# Franco Frolloni <frolloni@gmail.com>, 2016
 msgid ""
 msgstr ""
-"Project-Id-Version: live-installer\n"
+"Project-Id-Version: live-installer-3\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-01-18 08:57+0100\n"
-"PO-Revision-Date: 2016-01-02 09:09+0000\n"
+"POT-Creation-Date: 2016-01-19 15:39+0100\n"
+"PO-Revision-Date: 2016-01-19 14:29+0000\n"
 "Last-Translator: Arjen Balfoort <schoelje@solydxk.com>\n"
-"Language-Team: Italian (http://www.transifex.com/solydxk/live-installer/"
+"Language-Team: Italian (http://www.transifex.com/solydxk/live-installer-3/"
 "language/it/)\n"
 "Language: it\n"
 "MIME-Version: 1.0\n"
@@ -228,29 +229,24 @@ msgid "Not mounted"
 msgstr ""
 
 #: ../usr/lib/live-installer-3/installer.py:270
-#, fuzzy
 msgid ""
 "You must first manually mount your target filesystem(s) at /target to do a "
 "custom install!"
 msgstr ""
-"ERRORE: Devi prima montare manualmente il/i filesystem di destinazione in /"
-"target per eseguire una installazione personalizzata!"
 
 #: ../usr/lib/live-installer-3/installer.py:279
 msgid "Base filesystem does not exist"
 msgstr ""
 
 #: ../usr/lib/live-installer-3/installer.py:280
-#, fuzzy
 msgid ""
 "Something is wrong with the installation medium! This is usually caused by "
 "burning tools which are not compatible with {}. Please burn the ISO image to "
 "DVD/USB using a different tool."
 msgstr ""
-"ERRORE: Qualcosa è andato storto con il supporto di installazione! Ciò "
-"capita in genere a causa di strumenti di copia o masterizzazione non "
-"compatibili con {}. Si consiglia di trasferire l'immagine ISO su DVD/USB "
-"usando uno strumento differente."
+"Qualcosa è andato storto con il supporto di installazione! In genere a causa "
+"di strumenti di copia o masterizzazione non compatibili con {}. Si consiglia "
+"di trasferire l'immagine ISO su DVD/USB usando uno strumento differente."
 
 #: ../usr/lib/live-installer-3/installer.py:333
 msgid "Copying"
@@ -261,9 +257,8 @@ msgid "Entering the system ..."
 msgstr "Accesso al sistema..."
 
 #: ../usr/lib/live-installer-3/installer.py:377
-#, fuzzy
 msgid "Installing EFI packages..."
-msgstr "Installazione di {} in corso..."
+msgstr ""
 
 #: ../usr/lib/live-installer-3/installer.py:421
 msgid "Installing drivers"
@@ -311,7 +306,7 @@ msgstr "Rimozione VirtualBox"
 
 #: ../usr/lib/live-installer-3/installer.py:696
 msgid "Removing os-prober"
-msgstr ""
+msgstr "Rimozione di os-prober"
 
 #: ../usr/lib/live-installer-3/installer.py:702
 msgid "Setting keyboard options"
@@ -326,13 +321,12 @@ msgid "Grub not configured"
 msgstr ""
 
 #: ../usr/lib/live-installer-3/installer.py:756
-#, fuzzy
 msgid ""
 "The grub bootloader was not configured properly! You need to configure it "
 "manually."
 msgstr ""
-"ATTENZIONE: Il bootloader grub non è stato configurato correttamente! È "
-"necessaria una configurazione manuale."
+"Il bootloader grub non è stato configurato correttamente! È necessaria una "
+"configurazione manuale."
 
 #: ../usr/lib/live-installer-3/installer.py:777
 msgid "Configuring Plymouth"
@@ -347,9 +341,8 @@ msgid "Cleaning APT"
 msgstr "Pulizia di APT"
 
 #: ../usr/lib/live-installer-3/installer.py:830
-#, fuzzy
 msgid "Unmounting partitions"
-msgstr "Cifratura di %(partition)s ..."
+msgstr ""
 
 #: ../usr/lib/live-installer-3/installer.py:852
 #: ../usr/lib/live-installer-3/gtk_interface.py:848
@@ -917,19 +910,16 @@ msgstr ""
 "Sei sicuro di voler continuare?"
 
 #: ../usr/lib/live-installer-3/gtk_interface.py:1223
-#, fuzzy
 msgid "Select image"
-msgstr "Seleziona il fuso orario"
+msgstr ""
 
 #: ../usr/lib/live-installer-3/gtk_interface.py:1276
-#, fuzzy
 msgid "Take a photo"
-msgstr "Scatta una foto..."
+msgstr ""
 
 #: ../usr/lib/live-installer-3/gtk_interface.py:1277
-#, fuzzy
 msgid "Unable to take a photo."
-msgstr "Scatta una foto..."
+msgstr ""
 
 #: ../usr/share/applications/live-installer-3.desktop.in.h:1
 msgid "Install"
@@ -942,19 +932,3 @@ msgstr "Live installer"
 #: ../usr/share/applications/live-installer-3.desktop.in.h:3
 msgid "Install the operating system"
 msgstr "Installa il Sistema Operativo"
-
-#~ msgid "No slideshow template found."
-#~ msgstr "Nessun template per le slideshow trovato"
-
-#~ msgid "Images"
-#~ msgstr "Immagini"
-
-#~ msgid "Unexpected error"
-#~ msgstr "Errore inatteso"
-
-#~ msgid ""
-#~ "The installer has failed with the following unexpected error. Please "
-#~ "submit a bug report!"
-#~ msgstr ""
-#~ "DDM riporta il seguente messaggio di errore inatteso. Si consiglia di "
-#~ "inviare una segnalazione del bug!"
