--- a/po/ja.po
+++ b/po/ja.po
@@ -3,17 +3,17 @@
 # This file is distributed under the same license as the PACKAGE package.
 #
 # Translators:
-# Arjen Balfoort <schoelje@solydxk.com>, 2015
-# BALLOON a.k.a. Fu-sen., 2015
+# Arjen Balfoort <schoelje@solydxk.com>, 2015-2016
+# BALLOON a.k.a. Fu-sen., 2015-2016
 # BALLOON a.k.a. Fu-sen. <fu-sen+solydxk@shigakeiichi.com>, 2014
 msgid ""
 msgstr ""
-"Project-Id-Version: live-installer\n"
+"Project-Id-Version: live-installer-3\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-01-18 08:57+0100\n"
-"PO-Revision-Date: 2016-01-02 09:09+0000\n"
+"POT-Creation-Date: 2016-01-19 15:39+0100\n"
+"PO-Revision-Date: 2016-01-19 14:30+0000\n"
 "Last-Translator: Arjen Balfoort <schoelje@solydxk.com>\n"
-"Language-Team: Japanese (http://www.transifex.com/solydxk/live-installer/"
+"Language-Team: Japanese (http://www.transifex.com/solydxk/live-installer-3/"
 "language/ja/)\n"
 "Language: ja\n"
 "MIME-Version: 1.0\n"
@@ -226,28 +226,24 @@ msgid "Not mounted"
 msgstr ""
 
 #: ../usr/lib/live-installer-3/installer.py:270
-#, fuzzy
 msgid ""
 "You must first manually mount your target filesystem(s) at /target to do a "
 "custom install!"
 msgstr ""
-"エラー: まずカスタムインストールを行うため、目的のファイルシステム /target を"
-"手動でマウントしなければいけません！"
 
 #: ../usr/lib/live-installer-3/installer.py:279
 msgid "Base filesystem does not exist"
 msgstr ""
 
 #: ../usr/lib/live-installer-3/installer.py:280
-#, fuzzy
 msgid ""
 "Something is wrong with the installation medium! This is usually caused by "
 "burning tools which are not compatible with {}. Please burn the ISO image to "
 "DVD/USB using a different tool."
 msgstr ""
-"エラー: インストールメディアと違うものが検出されました！これは通常互換性ない"
-"ツールで書き込んだことによって発生します。対象 {} 別のツールを使用して、DVD/"
-"USB に ISO イメージを書き込んで下さい。"
+"インストールメディアと違うものが検出されました！これは通常互換性ないツールで"
+"書き込んだことによって発生します。対象 {} 別のツールを使用して、DVD/USB に "
+"ISO イメージを書き込んで下さい。"
 
 #: ../usr/lib/live-installer-3/installer.py:333
 msgid "Copying"
@@ -258,9 +254,8 @@ msgid "Entering the system ..."
 msgstr "新システムへ入っています..."
 
 #: ../usr/lib/live-installer-3/installer.py:377
-#, fuzzy
 msgid "Installing EFI packages..."
-msgstr "{} をインストール..."
+msgstr ""
 
 #: ../usr/lib/live-installer-3/installer.py:421
 msgid "Installing drivers"
@@ -308,7 +303,7 @@ msgstr "VirtualBox を削除"
 
 #: ../usr/lib/live-installer-3/installer.py:696
 msgid "Removing os-prober"
-msgstr ""
+msgstr "os-prober を削除中"
 
 #: ../usr/lib/live-installer-3/installer.py:702
 msgid "Setting keyboard options"
@@ -323,13 +318,11 @@ msgid "Grub not configured"
 msgstr ""
 
 #: ../usr/lib/live-installer-3/installer.py:756
-#, fuzzy
 msgid ""
 "The grub bootloader was not configured properly! You need to configure it "
 "manually."
 msgstr ""
-"警告: grub ブートローダーが正しく設定されていません! 手動で設定する必要があり"
-"ます。"
+"Grub ブートローダーが正しく設定されていません! 手動で設定する必要があります。"
 
 #: ../usr/lib/live-installer-3/installer.py:777
 msgid "Configuring Plymouth"
@@ -344,9 +337,8 @@ msgid "Cleaning APT"
 msgstr "APT を消去しています"
 
 #: ../usr/lib/live-installer-3/installer.py:830
-#, fuzzy
 msgid "Unmounting partitions"
-msgstr "%(partition)s を暗号化..."
+msgstr ""
 
 #: ../usr/lib/live-installer-3/installer.py:852
 #: ../usr/lib/live-installer-3/gtk_interface.py:848
@@ -718,6 +710,11 @@ msgid ""
 " - Recommended size: 30GB\n"
 " - Recommended filesystem format: ext4\n"
 msgstr ""
+"root パーティションはシステムをインストールするために必要です。\n"
+"\n"
+" - マウントポイント: /\n"
+" - 推奨サイズ: 30GB\n"
+" - 推奨ファイルシステムフォーマット: ext4\n"
 
 #: ../usr/lib/live-installer-3/gtk_interface.py:725
 msgid "The EFI partition is too small. It must be at least 100MB."
@@ -832,7 +829,7 @@ msgstr "すでに /target をマウント使用しています"
 
 #: ../usr/lib/live-installer-3/gtk_interface.py:922
 msgid "set boot flag"
-msgstr ""
+msgstr "boot フラグの設定"
 
 #: ../usr/lib/live-installer-3/gtk_interface.py:923
 msgid "Mount {}{} as {}"
@@ -898,19 +895,16 @@ msgstr ""
 "続けてもよろしいですか？"
 
 #: ../usr/lib/live-installer-3/gtk_interface.py:1223
-#, fuzzy
 msgid "Select image"
-msgstr "タイムゾーンの選択"
+msgstr ""
 
 #: ../usr/lib/live-installer-3/gtk_interface.py:1276
-#, fuzzy
 msgid "Take a photo"
-msgstr "写真を撮る.."
+msgstr ""
 
 #: ../usr/lib/live-installer-3/gtk_interface.py:1277
-#, fuzzy
 msgid "Unable to take a photo."
-msgstr "写真を撮る.."
+msgstr ""
 
 #: ../usr/share/applications/live-installer-3.desktop.in.h:1
 msgid "Install"
@@ -923,18 +917,3 @@ msgstr "ライブインストーラ"
 #: ../usr/share/applications/live-installer-3.desktop.in.h:3
 msgid "Install the operating system"
 msgstr "オペレーティングシステムのインストール"
-
-#~ msgid "No slideshow template found."
-#~ msgstr "スライドショーのテンプレートが見つかりません"
-
-#~ msgid "Images"
-#~ msgstr "画像"
-
-#~ msgid "Unexpected error"
-#~ msgstr "予想外のエラー"
-
-#~ msgid ""
-#~ "The installer has failed with the following unexpected error. Please "
-#~ "submit a bug report!"
-#~ msgstr ""
-#~ "インストーラーは下の予想外エラーで失敗しました。バグ報告を行って下さい！"
