--- a/po/nl.po
+++ b/po/nl.po
@@ -7,12 +7,12 @@
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2010
 msgid ""
 msgstr ""
-"Project-Id-Version: live-installer\n"
+"Project-Id-Version: live-installer-3\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-01-18 08:57+0100\n"
-"PO-Revision-Date: 2016-01-02 12:41+0000\n"
+"POT-Creation-Date: 2016-01-19 15:39+0100\n"
+"PO-Revision-Date: 2016-01-19 14:28+0000\n"
 "Last-Translator: Arjen Balfoort <schoelje@solydxk.com>\n"
-"Language-Team: Dutch (http://www.transifex.com/solydxk/live-installer/"
+"Language-Team: Dutch (http://www.transifex.com/solydxk/live-installer-3/"
 "language/nl/)\n"
 "Language: nl\n"
 "MIME-Version: 1.0\n"
@@ -193,11 +193,12 @@ msgstr ""
 #: ../usr/lib/live-installer-3/installer.py:139
 msgid "Verify that fstab is correct (use blkid to check the UUIDs)."
 msgstr ""
+"Controleer dat fstab is correct (gebruik blkid om de UUID's te controleren)."
 
 #: ../usr/lib/live-installer-3/installer.py:140
 msgid ""
 "A chrooted terminal and fstab will be opened after you close this message."
-msgstr ""
+msgstr "Een terminal en fstab worden geopend nadat dit scherm wordt gesloten."
 
 #: ../usr/lib/live-installer-3/installer.py:142
 msgid "Installation paused"
@@ -221,31 +222,29 @@ msgstr "Bezig met aankoppelen van %(partition)s aan %(mountpoint)s"
 
 #: ../usr/lib/live-installer-3/installer.py:269
 msgid "Not mounted"
-msgstr ""
+msgstr "Niet gekoppeld"
 
 #: ../usr/lib/live-installer-3/installer.py:270
-#, fuzzy
 msgid ""
 "You must first manually mount your target filesystem(s) at /target to do a "
 "custom install!"
 msgstr ""
-"FOUT: u dient eerst uw doel-bestandssyste(e)m(en) handmatig aan te koppelen "
-"op /target, om een aangepaste installatie uit te voeren."
+"U dient eerst uw doel bestandssysteem(en) te koppelen op /target voordat u "
+"een aangepaste installatie kunt uitvoeren!"
 
 #: ../usr/lib/live-installer-3/installer.py:279
 msgid "Base filesystem does not exist"
-msgstr ""
+msgstr "Basis bestandssysteem bestaat niet"
 
 #: ../usr/lib/live-installer-3/installer.py:280
-#, fuzzy
 msgid ""
 "Something is wrong with the installation medium! This is usually caused by "
 "burning tools which are not compatible with {}. Please burn the ISO image to "
 "DVD/USB using a different tool."
 msgstr ""
-"FOUT: Er is iets mis met het installatie medium! Dit wordt meestal "
-"veroorzaakt door brand software die niet compatibel is met {}. Gelieve de "
-"ISO naar DVD/USB te branden met een andere tool."
+"Er is iets mis met het installatie medium! Dit wordt meestal veroorzaakt "
+"door brand software die niet compatibel is met {}. Gelieve de ISO naar DVD/"
+"USB te branden met een andere tool."
 
 #: ../usr/lib/live-installer-3/installer.py:333
 msgid "Copying"
@@ -256,9 +255,8 @@ msgid "Entering the system ..."
 msgstr "Nieuwe systeem aan het binnengaan..."
 
 #: ../usr/lib/live-installer-3/installer.py:377
-#, fuzzy
 msgid "Installing EFI packages..."
-msgstr "Installeren van {}..."
+msgstr "EFI pakketten installeren..."
 
 #: ../usr/lib/live-installer-3/installer.py:421
 msgid "Installing drivers"
@@ -291,7 +289,7 @@ msgstr "Apt cache bewerken"
 
 #: ../usr/lib/live-installer-3/installer.py:649
 msgid "Update the new system"
-msgstr ""
+msgstr "Het nieuwe systeem updaten"
 
 #: ../usr/lib/live-installer-3/installer.py:658
 msgid "Localizing packages"
@@ -319,16 +317,15 @@ msgstr "Opstartlader installeren"
 
 #: ../usr/lib/live-installer-3/installer.py:755
 msgid "Grub not configured"
-msgstr ""
+msgstr "Grub niet geconfigureerd"
 
 #: ../usr/lib/live-installer-3/installer.py:756
-#, fuzzy
 msgid ""
 "The grub bootloader was not configured properly! You need to configure it "
 "manually."
 msgstr ""
-"WAARSCHUWING: opstartlader Grub werd niet juist ingesteld! U dient deze "
-"handmatig in te stellen."
+"Opstartlader Grub werd niet juist ingesteld! U dient deze handmatig in te "
+"stellen."
 
 #: ../usr/lib/live-installer-3/installer.py:777
 msgid "Configuring Plymouth"
@@ -343,9 +340,8 @@ msgid "Cleaning APT"
 msgstr "APT schoonmaken"
 
 #: ../usr/lib/live-installer-3/installer.py:830
-#, fuzzy
 msgid "Unmounting partitions"
-msgstr "Versleutelen van %(partition)s ..."
+msgstr "Partities loskoppelen"
 
 #: ../usr/lib/live-installer-3/installer.py:852
 #: ../usr/lib/live-installer-3/gtk_interface.py:848
@@ -917,19 +913,16 @@ msgstr ""
 "Weet u zeker dat u wilt doorgaan?"
 
 #: ../usr/lib/live-installer-3/gtk_interface.py:1223
-#, fuzzy
 msgid "Select image"
-msgstr "Tijdzone selecteren"
+msgstr "Selecteer afbeelding"
 
 #: ../usr/lib/live-installer-3/gtk_interface.py:1276
-#, fuzzy
 msgid "Take a photo"
-msgstr "Neem een foto..."
+msgstr "Maak een foto"
 
 #: ../usr/lib/live-installer-3/gtk_interface.py:1277
-#, fuzzy
 msgid "Unable to take a photo."
-msgstr "Neem een foto..."
+msgstr "Niet in staat om een foto te nemen."
 
 #: ../usr/share/applications/live-installer-3.desktop.in.h:1
 msgid "Install"
@@ -942,19 +935,3 @@ msgstr "Installatieprogramma"
 #: ../usr/share/applications/live-installer-3.desktop.in.h:3
 msgid "Install the operating system"
 msgstr "Installeer het besturingssysteem"
-
-#~ msgid "No slideshow template found."
-#~ msgstr "Geen slideshow sjabloon gevonden."
-
-#~ msgid "Images"
-#~ msgstr "Afbeeldingen"
-
-#~ msgid "Unexpected error"
-#~ msgstr "Onverwachte fout"
-
-#~ msgid ""
-#~ "The installer has failed with the following unexpected error. Please "
-#~ "submit a bug report!"
-#~ msgstr ""
-#~ "De installatie is mislukt met de volgende onverwachte fout. Gelieve een "
-#~ "bug verslag in te dienen!"
