--- a/po/ru.po
+++ b/po/ru.po
@@ -3,17 +3,18 @@
 # This file is distributed under the same license as the PACKAGE package.
 #
 # Translators:
+# Arjen Balfoort <schoelje@solydxk.com>, 2016
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2010
 # Ilinsky Mikhail <mail@milinsky.com>, 2015
 # Анатолий Валерианович <ffox909@mail.ru>, 2015
 msgid ""
 msgstr ""
-"Project-Id-Version: live-installer\n"
+"Project-Id-Version: live-installer-3\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-01-18 08:57+0100\n"
-"PO-Revision-Date: 2016-01-02 09:09+0000\n"
+"POT-Creation-Date: 2016-01-19 15:39+0100\n"
+"PO-Revision-Date: 2016-01-19 14:38+0000\n"
 "Last-Translator: Arjen Balfoort <schoelje@solydxk.com>\n"
-"Language-Team: Russian (http://www.transifex.com/solydxk/live-installer/"
+"Language-Team: Russian (http://www.transifex.com/solydxk/live-installer-3/"
 "language/ru/)\n"
 "Language: ru\n"
 "MIME-Version: 1.0\n"
@@ -229,28 +230,24 @@ msgid "Not mounted"
 msgstr ""
 
 #: ../usr/lib/live-installer-3/installer.py:270
-#, fuzzy
 msgid ""
 "You must first manually mount your target filesystem(s) at /target to do a "
 "custom install!"
 msgstr ""
-"ОШИБКА: Для выполнения выборочной установки необходимо сначала вручную "
-"смонтировать файловую(ые) систему(ы) в /target!"
 
 #: ../usr/lib/live-installer-3/installer.py:279
 msgid "Base filesystem does not exist"
 msgstr ""
 
 #: ../usr/lib/live-installer-3/installer.py:280
-#, fuzzy
 msgid ""
 "Something is wrong with the installation medium! This is usually caused by "
 "burning tools which are not compatible with {}. Please burn the ISO image to "
 "DVD/USB using a different tool."
 msgstr ""
-"ОШИБКА: Что-то не так с установочным носителем! Это как правило, результат "
-"записи, инструментами не совместимыми с {}. Запишите образ ISO на DVD/USB с "
-"помощью другого инструмента."
+"Что-то не так с установочным носителем! Это как правило, результат записи, "
+"инструментами не совместимыми с {}. Запишите образ ISO на DVD/USB с помощью "
+"другого инструмента."
 
 #: ../usr/lib/live-installer-3/installer.py:333
 msgid "Copying"
@@ -261,9 +258,8 @@ msgid "Entering the system ..."
 msgstr "Вход в систему..."
 
 #: ../usr/lib/live-installer-3/installer.py:377
-#, fuzzy
 msgid "Installing EFI packages..."
-msgstr "Установка {}..."
+msgstr ""
 
 #: ../usr/lib/live-installer-3/installer.py:421
 msgid "Installing drivers"
@@ -326,13 +322,12 @@ msgid "Grub not configured"
 msgstr ""
 
 #: ../usr/lib/live-installer-3/installer.py:756
-#, fuzzy
 msgid ""
 "The grub bootloader was not configured properly! You need to configure it "
 "manually."
 msgstr ""
-"ВНИМАНИЕ: Загрузчик grub не был правильно сконфигурирован! Вам нужно "
-"настроить его вручную."
+"Загрузчик grub не был правильно сконфигурирован! Вам нужно настроить его "
+"вручную."
 
 #: ../usr/lib/live-installer-3/installer.py:777
 msgid "Configuring Plymouth"
@@ -347,9 +342,8 @@ msgid "Cleaning APT"
 msgstr "Очистка APT"
 
 #: ../usr/lib/live-installer-3/installer.py:830
-#, fuzzy
 msgid "Unmounting partitions"
-msgstr "Шифрование %(partition)s ..."
+msgstr ""
 
 #: ../usr/lib/live-installer-3/installer.py:852
 #: ../usr/lib/live-installer-3/gtk_interface.py:848
@@ -906,19 +900,16 @@ msgstr ""
 "Уверены, что хотите продолжить?"
 
 #: ../usr/lib/live-installer-3/gtk_interface.py:1223
-#, fuzzy
 msgid "Select image"
-msgstr "Выберите часовой пояс"
+msgstr ""
 
 #: ../usr/lib/live-installer-3/gtk_interface.py:1276
-#, fuzzy
 msgid "Take a photo"
-msgstr "Сделать фотографию..."
+msgstr ""
 
 #: ../usr/lib/live-installer-3/gtk_interface.py:1277
-#, fuzzy
 msgid "Unable to take a photo."
-msgstr "Сделать фотографию..."
+msgstr ""
 
 #: ../usr/share/applications/live-installer-3.desktop.in.h:1
 msgid "Install"
@@ -931,19 +922,3 @@ msgstr "Установщик"
 #: ../usr/share/applications/live-installer-3.desktop.in.h:3
 msgid "Install the operating system"
 msgstr ""
-
-#~ msgid "No slideshow template found."
-#~ msgstr "Шаблон слайд-шоу не найден."
-
-#~ msgid "Images"
-#~ msgstr "Изображения"
-
-#~ msgid "Unexpected error"
-#~ msgstr "Неожиданная ошибка"
-
-#~ msgid ""
-#~ "The installer has failed with the following unexpected error. Please "
-#~ "submit a bug report!"
-#~ msgstr ""
-#~ "Установка прервалась из-за неожиданной ошибки. Пожалуйста, отправьте "
-#~ "отчет об ошибке"
