--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+live-installer-3 (2016.01.31) debian; urgency=low
+
+  * Removed mouse pointer change when formatting an empty drive
+
+ -- Arjen Balfoort <arjenbalfoort@solydxk.com>  Sun, 31 Jan 2016 19:00:00 +0100
+
 live-installer-3 (2016.01.21) debian; urgency=low
 
   * Updated translations
