--- a/po/ms.po
+++ b/po/ms.po
@@ -10,9 +10,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: live-installer-3\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-03-22 16:35+0100\n"
-"PO-Revision-Date: 2016-03-22 15:13+0000\n"
-"Last-Translator: Arjen Balfoort <schoelje@solydxk.com>\n"
+"POT-Creation-Date: 2016-03-24 08:18+0100\n"
+"PO-Revision-Date: 2016-03-22 17:32+0000\n"
+"Last-Translator: Alderson Robert Jenet <alderson@outlook.my>\n"
 "Language-Team: Malay (http://www.transifex.com/solydxk/live-installer-3/"
 "language/ms/)\n"
 "Language: ms\n"
@@ -23,7 +23,7 @@ msgstr ""
 
 #: ../usr/lib/live-installer-3/localize.py:49
 msgid "Install additional localized packages"
-msgstr "Memasang pakej tambahan"
+msgstr "Memasang pakej tambahan yang telah dikenal pasti"
 
 #: ../usr/lib/live-installer-3/localize.py:62
 msgid "Localizing KDE"
@@ -354,7 +354,7 @@ msgstr "Memeriksa pemuat but"
 #: ../usr/lib/live-installer-3/installer.py:953
 #, python-format
 msgid "No %s file found!"
-msgstr ""
+msgstr "Tiada %s sebarang fail ditemui!"
 
 #: ../usr/lib/live-installer-3/gtk_interface.py:265
 #, python-format
@@ -366,6 +366,12 @@ msgid ""
 "Without an internet connection your system will not be upgraded and some "
 "packages cannot be localized."
 msgstr ""
+"Sila klik pada sistem network manager di ikon tray untuk penyambungan "
+"internet sebelum anda teruskan\n"
+"\n"
+"Anda boleh pasangkan %s tanpa internet.\n"
+"Internet adalah diperlukan untuk mengemas kini sistem anda bersama pakej "
+"yang belum dapat dikenal pasti."
 
 #: ../usr/lib/live-installer-3/gtk_interface.py:268
 #: ../usr/lib/live-installer-3/gtk_interface.py:352
@@ -393,11 +399,11 @@ msgstr ""
 #: ../usr/lib/live-installer-3/gtk_interface.py:501
 #: ../usr/lib/live-installer-3/gtk_interface.py:506
 msgid "{} Installer"
-msgstr "Pemasang"
+msgstr "Pemasangan"
 
 #: ../usr/lib/live-installer-3/gtk_interface.py:504
 msgid "{} OEM Setup"
-msgstr ""
+msgstr "{} OEM Dipasang"
 
 #: ../usr/lib/live-installer-3/gtk_interface.py:520
 #: ../usr/lib/live-installer-3/gtk_interface.py:540
@@ -410,7 +416,7 @@ msgstr "Zon waktu"
 
 #: ../usr/lib/live-installer-3/gtk_interface.py:522
 msgid "Keyboard layout"
-msgstr "Bentangan papan kekunci"
+msgstr "Paparan kekunci"
 
 #: ../usr/lib/live-installer-3/gtk_interface.py:523
 msgid "User info"
@@ -418,7 +424,7 @@ msgstr "Maklumat pengguna"
 
 #: ../usr/lib/live-installer-3/gtk_interface.py:524
 msgid "Partitioning"
-msgstr "Menyekatkan"
+msgstr "Partition dijalankan"
 
 #: ../usr/lib/live-installer-3/gtk_interface.py:525
 msgid "Please make sure you wish to manage partitions manually"
@@ -590,8 +596,8 @@ msgid ""
 "You have selected to manage your partitions manually, this feature is for "
 "ADVANCED USERS ONLY."
 msgstr ""
-"Anda telah memilih untuk mengurus sekatan anda secara manual, fitur ini "
-"untuk PENGGUNA MAHIR SAHAJA."
+"Anda telah memilih untuk mengurus partition anda secara manual, kelebihan "
+"ini untuk PENGGUNA MAHIR SAHAJA."
 
 #: ../usr/lib/live-installer-3/gtk_interface.py:598
 #, python-format
@@ -609,8 +615,8 @@ msgid ""
 "During the install, you will be given time to chroot into %s and install any "
 "packages that will be needed to boot your new system."
 msgstr ""
-"Anda diberikan masa untuk tetapkan chroot ke %s dan memasukkan semua pakej "
-"yang diperlukan semasa pemasangan untuk memulakan sistem baru anda."
+"Semasa melakukan pemasangan anda diberi masa untuk chroot kedalam %s dan "
+"memasang sebarang pakej diperlukan untuk boot pada sistem anda."
 
 #: ../usr/lib/live-installer-3/gtk_interface.py:604
 msgid "During the install, you will be required to write your own /etc/fstab."
@@ -691,7 +697,7 @@ msgstr "Pilih nama pengguna anda"
 
 #: ../usr/lib/live-installer-3/gtk_interface.py:697
 msgid "Please provide a username without -oem."
-msgstr ""
+msgstr "Sila sediakan nama pengguna tanpa -oem"
 
 #: ../usr/lib/live-installer-3/gtk_interface.py:700
 msgid "Please provide a password for your user account."
@@ -699,7 +705,7 @@ msgstr "Pilih kata laluan untuk akaun pengguna anda."
 
 #: ../usr/lib/live-installer-3/gtk_interface.py:703
 msgid "Your passwords do not match."
-msgstr "Kata laluan anda tidak padan."
+msgstr "Kata laluan tidak padan."
 
 #: ../usr/lib/live-installer-3/gtk_interface.py:706
 msgid "Please provide a hostname."
@@ -792,11 +798,11 @@ msgstr ""
 
 #: ../usr/lib/live-installer-3/gtk_interface.py:925
 msgid "Setup finished"
-msgstr ""
+msgstr "Pemasangan telah selesai"
 
 #: ../usr/lib/live-installer-3/gtk_interface.py:926
 msgid "Setup is now complete. The system will now reboot."
-msgstr ""
+msgstr "Pemasangan telah selesai. Sistem sedia untuk reboot"
 
 #: ../usr/lib/live-installer-3/gtk_interface.py:932
 msgid ""
@@ -860,7 +866,7 @@ msgstr "Operasi sistem fail"
 
 #: ../usr/lib/live-installer-3/gtk_interface.py:995
 msgid "Install Grub on {}"
-msgstr "Sila masukkan Grub"
+msgstr "Sila masukkan Grub di {}"
 
 #: ../usr/lib/live-installer-3/gtk_interface.py:995
 msgid "Do not install Grub"
@@ -941,7 +947,7 @@ msgstr "Pilih imej"
 
 #: ../usr/lib/live-installer-3/gtk_interface.py:1343
 msgid "Unable to convert the image."
-msgstr ""
+msgstr "Tidak dapat untuk menukar imej"
 
 #: ../usr/lib/live-installer-3/gtk_interface.py:1374
 msgid "Take a photo"
