--- a/po/pt.po
+++ b/po/pt.po
@@ -11,9 +11,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: live-installer-3\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-03-22 16:35+0100\n"
-"PO-Revision-Date: 2016-03-22 15:22+0000\n"
-"Last-Translator: Arjen Balfoort <schoelje@solydxk.com>\n"
+"POT-Creation-Date: 2016-03-24 08:18+0100\n"
+"PO-Revision-Date: 2016-03-22 23:31+0000\n"
+"Last-Translator: Luis Filipe Teixeira <lufilte@gmail.com>\n"
 "Language-Team: Portuguese (http://www.transifex.com/solydxk/live-installer-3/"
 "language/pt/)\n"
 "Language: pt\n"
@@ -319,8 +319,8 @@ msgid ""
 "The grub bootloader was not configured properly! You need to configure it "
 "manually."
 msgstr ""
-"O arranque automático GRUB não foi configurado corretamente! Você precisa "
-"configurá-lo manualmente."
+"O arranque automático GRUB não foi configurado correctamente! Você precisa "
+"de o configurar manualmente."
 
 #: ../usr/lib/live-installer-3/installer.py:809
 msgid "Grub not configured"
@@ -358,7 +358,7 @@ msgstr "A verificar o gestor de arranque"
 #: ../usr/lib/live-installer-3/installer.py:953
 #, python-format
 msgid "No %s file found!"
-msgstr ""
+msgstr "Nenhum %s ficheiro encontrado!"
 
 #: ../usr/lib/live-installer-3/gtk_interface.py:265
 #, python-format
@@ -696,7 +696,7 @@ msgstr "Por favor, forneça um nome do utilizador."
 
 #: ../usr/lib/live-installer-3/gtk_interface.py:697
 msgid "Please provide a username without -oem."
-msgstr ""
+msgstr "Por favor, forneça um nome de utilizador sem ser -oem."
 
 #: ../usr/lib/live-installer-3/gtk_interface.py:700
 msgid "Please provide a password for your user account."
