--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+live-installer-3 (2016.03.29) debian; urgency=low
+
+  * Added console-setup as a dependency
+
+ -- Arjen Balfoort <arjenbalfoort@solydxk.com>  Tue, 29 Mar 2016 13:20:58 +0200
+
 live-installer-3 (2016.03.26) debian; urgency=low
 
   * Configure power supply when on laptop
